// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/ItemExpirationNotice should accept node as expiration 1`] = `
<InlineNotice>
  <FormattedMessage
    defaultMessage="This file will be deleted on {expiration}."
    id="boxui.itemDetails.fileExpiration"
    values={
      Object {
        "expiration": <FormattedDate
          value="1517533810845"
        />,
      }
    }
  />
</InlineNotice>
`;

exports[`features/item-details/ItemExpirationNotice should render default component 1`] = `
<InlineNotice>
  <FormattedMessage
    defaultMessage="This file will be deleted on {expiration}."
    id="boxui.itemDetails.fileExpiration"
    values={
      Object {
        "expiration": "May 27, 2018",
      }
    }
  />
</InlineNotice>
`;

exports[`features/item-details/ItemExpirationNotice should render default component 2`] = `
<InlineNotice>
  <FormattedMessage
    defaultMessage="This folder will be deleted on {expiration}."
    id="boxui.itemDetails.folderExpiration"
    values={
      Object {
        "expiration": "May 27, 2018",
      }
    }
  />
</InlineNotice>
`;

exports[`features/item-details/ItemExpirationNotice should render default component 3`] = `
<InlineNotice>
  <FormattedMessage
    defaultMessage="This bookmark will be deleted on {expiration}."
    id="boxui.itemDetails.bookmarkExpiration"
    values={
      Object {
        "expiration": "May 27, 2018",
      }
    }
  />
</InlineNotice>
`;
